--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,13 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
-default = ["serde_support"]
+default = ["serde_support", "sqlx"]
 serde_support = ["serde"]
+sqlx = ["sqlx"]
 
 [dependencies]
 serde = { optional = true, version = "1.0" }
+sqlx = {optional = true, version = "0.8" }
 
 [dev-dependencies]
 claims = "0.8.0"
