gate postgres stuff behind separate feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,10 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
-default = ["serde_support", "sqlx"]
+default = ["serde_support"]
 serde_support = ["serde"]
-sqlx = ["sqlx"]
+sqlx = ["dep:sqlx"]
+sqlx_postgres = ["sqlx", "sqlx/postgres"]
 
 [dependencies]
 serde = { optional = true, version = "1.0" }
@@ -26,3 +27,4 @@ sqlx = {optional = true, version = "0.8" }
 [dev-dependencies]
 claims = "0.8.0"
 serde_assert = "0.8.0"
+sqlx-core = "0.8"
