--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,22 +3,22 @@ name: Rust
 on:
   pull_request:
     paths:
-    - '**'
-    - '!/*.md'
-    - '!/*.org'
-    - "!/LICENSE"
-    
+      - "**"
+      - "!/*.md"
+      - "!/*.org"
+      - "!/LICENSE"
+
   push:
     branches:
-    - main
+      - main
     paths:
-    - '**'
-    - '!/*.md'
-    - '!/*.org'
-    - "!/LICENSE"
-    
+      - "**"
+      - "!/*.md"
+      - "!/*.org"
+      - "!/LICENSE"
+
   schedule:
-  - cron: '12 12 12 * *'
+    - cron: "12 12 12 * *"
 
 jobs:
   publish:
@@ -27,29 +27,28 @@ jobs:
     strategy:
       matrix:
         package:
-          - email_address
+          - email_address2
     continue-on-error: true
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        
-    - uses: Swatinem/rust-cache@v2
-      
-    - name: Check publish
-      uses: actions-rs/cargo@v1
-      with:
-        command: publish
-        args: --package ${{ matrix.package}} --dry-run
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
+      - uses: Swatinem/rust-cache@v2
+
+      - name: Check publish
+        uses: actions-rs/cargo@v1
+        with:
+          command: publish
+          args: --package ${{ matrix.package}} --dry-run
+
   check_tests:
     name: Check for test types
     runs-on: ubuntu-latest
@@ -61,13 +60,12 @@ jobs:
         id: check_benchmarks
         run: test -d benchmarks && echo "has_benchmarks=1" || echo "has_benchmarks=" >> $GITHUB_OUTPUT
         shell: bash
-        
+
       - name: Check for examples
         id: check_examples
         run: test -d examples && echo "has_examples=1" || echo "has_examples=" >> $GITHUB_OUTPUT
         shell: bash
 
-        
   test:
     name: Test
     needs: [rustfmt, clippy]
@@ -79,31 +77,30 @@ jobs:
     continue-on-error: ${{ matrix.rust != 'stable' }}
     runs-on: ${{ matrix.os }}
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: ${{ matrix.rust }}
-        profile: minimal
-        override: true
-        
-    - uses: Swatinem/rust-cache@v2
-      
-    - name: Build
-      uses: actions-rs/cargo@v1
-      with:
-        command: build
-        args: --workspace ${{ matrix.test-features }}
-      
-    - name: Test
-      uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --workspace ${{ matrix.test-features }}
- 
-      
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          profile: minimal
+          override: true
+
+      - uses: Swatinem/rust-cache@v2
+
+      - name: Build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --workspace ${{ matrix.test-features }}
+
+      - name: Test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --workspace ${{ matrix.test-features }}
+
   benchmarks:
     name: Benchmarks
     needs: [rustfmt, clippy, check_tests]
@@ -114,25 +111,24 @@ jobs:
         rust: ["stable"]
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: ${{ matrix.rust }}
-        profile: minimal
-        override: true
-        
-    - uses: Swatinem/rust-cache@v2
-      
-    - name: Run benchmarks with all features
-      uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --workspace --benches --all-features --no-fail-fast
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          profile: minimal
+          override: true
+
+      - uses: Swatinem/rust-cache@v2
+
+      - name: Run benchmarks with all features
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --workspace --benches --all-features --no-fail-fast
+
   examples:
     name: Examples
     needs: [rustfmt, clippy, check_tests]
@@ -143,26 +139,25 @@ jobs:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         rust: ["stable"]
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: ${{ matrix.rust }}
-        profile: minimal
-        override: true
-        
-    - uses: Swatinem/rust-cache@v2
-      
-    - name: Run examples with all features
-      uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --workspace --examples --all-features --no-fail-fast
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-        
-  coverage:   
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          profile: minimal
+          override: true
+
+      - uses: Swatinem/rust-cache@v2
+
+      - name: Run examples with all features
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --workspace --examples --all-features --no-fail-fast
+
+  coverage:
     name: Code Coverage
     needs: test
     runs-on: ubuntu-latest
@@ -197,77 +192,74 @@ jobs:
           name: code-coverage-report
           path: cobertura.xml
 
-          
   docs:
     name: Document generation
     needs: [rustfmt, clippy]
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        
-    - uses: Swatinem/rust-cache@v2
-      
-    - name: Generate documentation
-      uses: actions-rs/cargo@v1
-      env:
-        RUSTDOCFLAGS: -D warnings
-      with:
-        command: doc
-        args: --workspace --all-features --no-deps
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
+      - uses: Swatinem/rust-cache@v2
+
+      - name: Generate documentation
+        uses: actions-rs/cargo@v1
+        env:
+          RUSTDOCFLAGS: -D warnings
+        with:
+          command: doc
+          args: --workspace --all-features --no-deps
+
   rustfmt:
     name: rustfmt
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        components: rustfmt
-              
-    - uses: Swatinem/rust-cache@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Check formatting
-      uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: --all -- --check
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+          components: rustfmt
 
-      
+      - uses: Swatinem/rust-cache@v2
+
+      - name: Check formatting
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
+
   clippy:
     name: clippy
     runs-on: ubuntu-latest
     permissions:
       checks: write
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        components: clippy
-              
-    - uses: Swatinem/rust-cache@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - uses: actions-rs/clippy-check@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        args: --workspace --no-deps --all-features --all-targets -- -D warnings
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+          components: clippy
+
+      - uses: Swatinem/rust-cache@v2
+
+      - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --workspace --no-deps --all-features --all-targets -- -D warnings
