--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "email_address2"
 version = "0.2.9"
 authors = ["Thomas Zuyev"]
 description = "A Rust crate providing an implementation of an RFC-compliant `EmailAddress` newtype. "
-documentation = "https://docs.rs/email_address/"
+documentation = "https://docs.rs/email_address2/"
 repository = "https://github.com/Bolderaysky/email_address2.git"
 edition = "2018"
 license = "MIT"
